2003-11-04	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug in procedure type declaration.

2003-11-03	Gaius Mulley <gaius@glam.ac.uk>

	* modified ProcedureBlock rule in bnf/m2.bnf, bnf/m2-[23h].bnf
	  to comply with ISO syntax. The 'BEGIN' statement sequence is
	  optional.
	* updated the gm2.texi to include a description about
	  the -Wextended-opaque option.

2003-10-23	Gaius Mulley <gaius@glam.ac.uk>

	* fixes to opaque type (in)compatibility for expression and assignments.

2003-10-09	Gaius Mulley <gaius@glam.ac.uk>

	* fixed gm2 build with ./configure --enable-checking
	
2003-10-07	Gaius Mulley <gaius@glam.ac.uk>

	* introduced -Wextended-opaque which enables the GM2 extension
	  to opaque types. This allows opaque types to be non pointer
	  types, but requires that GM2 parse the corresponding
	  implementation module.
	* modified GM2 to default to the standard opaque implementation
	  of using SYSTEM.ADDRESS as the `opaque type' outside the
	  module of its declaration.
	* introduced -Wverbose to allow users see the source file names
	  for modules as they are being compiled.
	
2003-09-30	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug in ADDADR as reported by Iztok
	* fixed bug in exported type name clashes as reported by Iztok
	* fixed bug with multiple type references to a SET
	* fixed Min`basetype' to contain the type `basetype'
	* tidied up IsReallyPointer in M2Quads.mod

2003-09-25	Gaius Mulley <gaius@glam.ac.uk>

	* fixed -Wmakeall option.
	* fixed CARDINAL type to have range 0..max(unsigned int)
	  rather than 0..max(integer) as reported by Iztok.
	* fixed set type incomparability as reported by Iztok.
	* fixed README note about make gm2.paranoid as reported by
          Matthias Kurz.
	* fixed many of the example programs which were broken during
	  the migration to gcc-3.3.1.
	* fixed lang-specs.h to invoke new cpp.
	* removed the M2PATH environment variable usage.
	* added more modules to make gm2.paranoid.
	* fixed gm2->gcc declaration of arrays.