@@ -1,3 +1,13 @@
+2003-11-07	Gaius Mulley <gaius@glam.ac.uk>
+
+	* changed the flag name -Wverbose to -Wsources
+	
+2003-11-07	Gaius Mulley <gaius@glam.ac.uk>
+
+	* improved array index type debugging description in gccgm2.c
+	  which allows gdb to understand that arrays are declared ARRAY
+	  [low..high] rather than ARRAY [0..high-low]
+	
 2003-11-04	Gaius Mulley <gaius@glam.ac.uk>
 
 	* fixed bug in procedure type declaration.
